# iPM3D

./: .gitignore  CMakeLists.txt  README.md  plotE.py  plotdensity.py  plotphi.py  setup.sh
input/: material.h5  material65.h5  material95.h5
input/gas/lxcat/O2/: ElectronO2.txt
mcc/: FieldEM.f90  FieldInterface.f90  MCCInit.F90  MCCPublic.F90  MCCinterface.f90  Numrical.F90  ParticleOne.f90  ParticleOneIndex.f90  ReactionOnePegasus.f90  TypeMCC.f90  constants.mod  mccenergykai.mod  modulefieldone.mod
pic/: create_particles.cpp  create_particles.h  domain.cpp  domain.h  fieldsolver.cpp  fieldsolver.h  main.cpp  material.cpp  material.h  math_const.h  memory.cpp  particle.cpp  particle.h  pointers.h  sparta.cpp
run/: cxx-call-f-cxx
run/input/gas/pegasus/SiH_4/He-bak/: He.txt
run/solve/: finalphi2.txt  finalphi4.txt  finalphi7.txt  initphi4.txt  initphi5.txt  initphi6.txt  petscphi0.txt  petscphi1.txt  petscphi2.txt  petscphi3.txt  petscphi4.txt  petscphi5.txt  petscphi6.txt  petscphi7.txt
testfield/: CMakeLists.txt  PICCom.F90  PICFieldCom.f90  PICFieldCom3d.f90  fieldplot.py  setup.sh  test.f90  test_field_com.F90  test_field_com3d.f90  test_fieldcom3d  test_fieldcom3d.f90
testparticle/: CMakeLists.txt  PICCom3d.f90  PICParticleCom3d.f90  ParticleBundle.f90  ParticleBundleIndex.f90  ParticleCoarray.F90  ParticleOne.f90  moduleparticlebundle.mod  moduleparticleone.mod  test_particle_com.F90  test_particle_com3d.F90
testpetsc/: CMakeLists.txt  Constants.F90  FieldBoundary2DZR.F90  FieldEM.f90  FieldInterface.f90  FieldOne.f90  FieldSolver.f90  FieldSource.f90  Geometry.F90  MCCInit.F90  MCCSigma.f90  MCCinterface.f90  PICFieldCom3d.f90  ParticleBundle.f90  ReactionOnePegasus.f90  SpecyOne.F90  TypeMCC.f90  field3d.f90  fieldsolver.cpp  fieldsolver.h  main.cpp  material.cpp  material.h  material3d.f90  particle.h  plotphi.py  setup.sh  test.cpp  test_2d_n4.h  test_3d_n8.cpp  test_field_com3d.f90  test_petsc_solver.F90
testpetsc/include/: solveBase.hpp  vectorBase.hpp
testpetsc/input/: geometry.txt
testpetsc/input/gas/lxcat/O2/: O2.txt
testpetsc/input/gas/pegasus/Ar/: Ar.txt
testpetsc/materials/: Materials.F90  MaterialsCom.F90
testpetsc/mc/: MCCInit.F90  MCCSigma.f90  MCCinterface.f90  ReactionOnePegasus copy.f90  ReactionOnePegasus.f90  Recombination.F90  SpecyOne.F90  TypeMCC.f90
testpetsc/run/: cxx-call-f-cxx  logfile0.txt  logfile1.txt  logfile2.txt  logfile3.txt  logfile4.txt  logfile5.txt  logfile6.txt  logfile7.txt  loggfile0.txt  loggfile1.txt  loggfile2.txt  loggfile3.txt  loggfile4.txt  loggfile5.txt  loggfile6.txt  loggfile7.txt  logyyfile0.txt  logyyfile1.txt  logyyfile2.txt  logyyfile3.txt  logyyfile4.txt  logyyfile5.txt  logyyfile6.txt  logyyfile7.txt
testpetsc/run/ext/field/: fieldx0.txt  fieldx1.txt  fieldx2.txt  fieldx3.txt  fieldx4.txt  fieldx5.txt  fieldx6.txt  fieldx7.txt  fieldy0.txt  fieldy1.txt  fieldy2.txt  fieldy3.txt  fieldy4.txt  fieldy5.txt  fieldy6.txt  fieldy7.txt  fieldz0.txt  fieldz1.txt  fieldz2.txt  fieldz3.txt  fieldz4.txt  fieldz5.txt  fieldz6.txt  fieldz7.txt
testpetsc/run/ext/potential/: final_potential0.txt  final_potential1.txt  final_potential2.txt  final_potential3.txt  final_potential4.txt  final_potential5.txt  final_potential6.txt  final_potential7.txt  raw_potential0.txt  raw_potential3.txt  raw_potential4.txt  raw_potential7.txt
testpetsc/run/field/: field0.txt  field1.txt  field2.txt  field3.txt  field4.txt  field5.txt  field6.txt  field7.txt
testpetsc/run/solve/: finalphi0.txt  finalphi1.txt  finalphi3.txt  finalphi5.txt  finalphi6.txt  initphi0.txt  initphi1.txt  initphi2.txt  initphi3.txt  initphi7.txt  petscphi0.txt  petscphi1.txt  petscphi2.txt  petscphi3.txt  petscphi4.txt  petscphi5.txt  petscphi6.txt  petscphi7.txt
testpetsc/run/sum/: final_field_0.txt  final_field_1.txt  final_field_2.txt  final_field_3.txt  final_field_4.txt  final_field_5.txt  final_field_6.txt  final_field_7.txt  raw_field_5.txt
testpetsc/source/: solveBase.cpp  vectorBase.cpp
testpetsc/src/: PICParticleCom3d.f90  create_particles.cpp  create_particles.h  domain.cpp  domain.h  fieldsolver.cpp  fieldsolver.h  main.cpp  material.cpp  material.h  math_const.h  memory.h  mixture.cpp  mixture.h  particle.cpp  particle.h  sparta.h
